// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YAML round-trip (fixtures) > round-trips 01-simple-trigger-action.yaml to identical YAML 1`] = `
"alias: Simple Light Automation
description: Turn on light when motion detected
trigger:
  - platform: state
    entity_id: binary_sensor.motion_sensor
    to: "on"
action:
  - service: light.turn_on
    target:
      entity_id: light.living_room
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_136:
        x: 12
        "y": 12
      action_test_1_137:
        x: 312
        "y": 12
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 02-knx-complex.yaml to identical YAML 1`] = `
"alias: KNX Night/Morning Automation
description: Handle KNX button presses for night/morning scenes
trigger:
  - alias: KNX Button Press
    platform: device
    device_id: ee504a40b987814032d9ec9c29b1a43f
    domain: knx
    type: telegram
    group_value_write: true
    group_value_response: true
    group_value_read: true
    incoming: true
    outgoing: false
    destination:
      - 2/0/11
      - 2/0/5
action:
  - alias: Time-based Scene Selection
    if:
      - condition: or
        conditions:
          - condition: sun
            after: sunset
            after_offset: "-03:00:00"
          - condition: sun
            before: sunrise
            before_offset: "-03:00:00"
    then:
      - alias: Night Scene
        service: script.turn_on
        target:
          entity_id: script.buonanotte
    else:
      - alias: Morning Scene
        service: script.turn_on
        target:
          entity_id: script.buongiorno
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_132:
        x: 12
        "y": 92
      condition_test_1_133:
        x: 312
        "y": 82
      action_test_2_134:
        x: 632
        "y": 12
      action_test_3_135:
        x: 632
        "y": 172
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 03-multiple-conditions.yaml to identical YAML 1`] = `
"alias: Movie Mode Automation
description: Close covers when movie starts with proper conditions
trigger:
  - platform: state
    entity_id: media_player.tv
    to: playing
    for: "00:00:05"
action:
  - variables:
      current_node: condition_test_1_125
      flow_context: {}
  - alias: State Machine Loop
    repeat:
      until: "{{ current_node == \\"END\\" }}"
      sequence:
        - choose:
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_1_125\\" }}"
              sequence:
                - variables:
                    current_node: "{% if states('sensor.brightness_sensor') | float > 120 %}\\"condition_test_2_126\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_2_126\\" }}"
              sequence:
                - if:
                    - condition: template
                      value_template: "{% set app = (state_attr('media_player.tv', 'app_name') or '') | string %} {% set ok_apps = ['TV','Apple TV','Prime Video','Netflix'] %} {{ app in ok_apps }}"
                  then:
                    - variables:
                        current_node: condition_test_3_127
                  else:
                    - variables:
                        current_node: END
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_3_127\\" }}"
              sequence:
                - variables:
                    current_node: "{% if (state_attr('media_player.tv','media_content_type') or '') | lower == 'movie' %}\\"condition_test_4_128\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_4_128\\" }}"
              sequence:
                - variables:
                    current_node: "{% if states('cover.velux_blind') != 'closed' %}\\"action_test_5_129\\"{% else %}\\"condition_test_6_130\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_5_129\\" }}"
              sequence:
                - service: cover.close_cover
                  target:
                    entity_id: cover.velux_blind
                - variables:
                    current_node: condition_test_6_130
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_6_130\\" }}"
              sequence:
                - variables:
                    current_node: "{% if states('cover.main_blind') != 'closed' %}\\"action_test_7_131\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_7_131\\" }}"
              sequence:
                - service: cover.close_cover
                  target:
                    entity_id: cover.main_blind
                - variables:
                    current_node: END
          default:
            - service: system_log.write
              data:
                message: "C.A.F.E.: Unknown state \\"{{ current_node }}\\", ending flow"
                level: warning
            - variables:
                current_node: END
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_124:
        x: 12
        "y": 32.5
      condition_test_1_125:
        x: 312
        "y": 22.5
      condition_test_2_126:
        x: 632
        "y": 22.5
      condition_test_3_127:
        x: 952
        "y": 22.5
      condition_test_4_128:
        x: 1272
        "y": 22.5
      action_test_5_129:
        x: 1592
        "y": 53
      condition_test_6_130:
        x: 1892
        "y": 22.5
      action_test_7_131:
        x: 2212
        "y": 32.5
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: state-machine
"
`;

exports[`YAML round-trip (fixtures) > round-trips 04-choose-with-default.yaml to identical YAML 1`] = `
"alias: Climate Control Based on Presence
description: Adjust temperature based on occupancy and time
trigger:
  - platform: state
    entity_id: binary_sensor.occupancy
    for: "00:05:00"
action:
  - if:
      - condition: and
        conditions:
          - condition: state
            entity_id: binary_sensor.occupancy
            state: "on"
          - condition: time
            after: "08:00:00"
            before: "22:00:00"
    then:
      - service: climate.set_temperature
        target:
          entity_id: climate.main
        data:
          temperature: 22
    else:
      - if:
          - condition: and
            conditions:
              - condition: state
                entity_id: binary_sensor.occupancy
                state: "on"
              - condition: time
                after: "22:00:00"
        then:
          - service: climate.set_temperature
            target:
              entity_id: climate.main
            data:
              temperature: 20
        else:
          - service: climate.set_temperature
            target:
              entity_id: climate.main
            data:
              temperature: 18
mode: restart
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_118:
        x: 12
        "y": 102
      condition_test_1_119:
        x: 312
        "y": 92
      action_test_2_120:
        x: 632
        "y": 192
      condition_test_3_121:
        x: 632
        "y": 12
      action_test_4_122:
        x: 952
        "y": 22
      action_test_5_123:
        x: 952
        "y": 182
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 05-delays-and-waits.yaml to identical YAML 1`] = `
"alias: Security Light Sequence
description: Automated security light sequence with delays
trigger:
  - platform: state
    entity_id: binary_sensor.motion_detector
    to: "on"
action:
  - service: light.turn_on
    target:
      entity_id: light.security_light
    data:
      brightness: 255
  - delay: "00:00:05"
  - service: light.turn_on
    target:
      entity_id: light.security_light
    data:
      brightness: 128
  - wait_template: "{{ is_state('binary_sensor.motion_detector', 'off') }}"
    timeout: "00:10:00"
  - delay: "00:01:00"
  - service: light.turn_off
    target:
      entity_id: light.security_light
mode: restart
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_111:
        x: 12
        "y": 12
      action_test_1_112:
        x: 312
        "y": 12
      delay_test_2_113:
        x: 612
        "y": 17
      action_test_3_114:
        x: 892
        "y": 12
      wait_test_4_115:
        x: 1192
        "y": 17
      delay_test_5_116:
        x: 1472
        "y": 17
      action_test_6_117:
        x: 1752
        "y": 12
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 06-multiple-triggers.yaml to identical YAML 1`] = `
"alias: Multi-trigger Door Bell
description: Ring doorbell from multiple input sources
trigger:
  - platform: state
    entity_id: binary_sensor.door_button
    to: "on"
  - platform: mqtt
    topic: doorbell/ring
  - platform: webhook
    webhook_id: doorbell_webhook
  - platform: time
    at: "12:00:00"
action:
  - service: media_player.play_media
    target:
      entity_id: media_player.speakers
    data:
      media_content_id: /local/sounds/doorbell.mp3
      media_content_type: music
  - service: notify.mobile_app
    data:
      message: Doorbell activated
      title: Home Security
mode: queued
max: 3
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_105:
        x: 12
        "y": 172
      trigger_test_1_106:
        x: 12
        "y": 332
      trigger_test_2_107:
        x: 12
        "y": 492
      trigger_test_3_108:
        x: 12
        "y": 12
      action_test_4_109:
        x: 312
        "y": 252
      action_test_5_110:
        x: 612
        "y": 252
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 07-adaptive-lighting-complex.yaml to identical YAML 1`] = `
"alias: Adaptive Lighting Quando Accendo Luci
description: ""
trigger:
  - platform: device
    device_id: ee504a40b987814032d9ec9c29b1a43f
    domain: knx
    type: telegram
    group_value_write: true
    incoming: true
    destination:
      - 2/4/7
      - 2/4/3
      - 2/4/4
      - 2/4/5
      - 2/4/6
      - 0/0/191
      - 0/0/142
      - 0/0/248
      - 0/0/1
action:
  - variables:
      current_node: condition_test_1_89
      flow_context: {}
  - alias: State Machine Loop
    repeat:
      until: "{{ current_node == \\"END\\" }}"
      sequence:
        - choose:
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_1_89\\" }}"
              sequence:
                - variables:
                    current_node: "{% if trigger.payload == 1 %}\\"condition_test_2_90\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_2_90\\" }}"
              sequence:
                - variables:
                    current_node: "{% if target_light is not none %}\\"wait_test_3_91\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"wait_test_3_91\\" }}"
              sequence:
                - wait_template: "{{ is_state(target_light, 'on') }}"
                  timeout: "00:00:03"
                - variables:
                    current_node: condition_test_4_92
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_4_92\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') %}\\"action_test_5_93\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_5_93\\" }}"
              sequence:
                - service: light.turn_on
                  target:
                    entity_id: "{{ target_light }}"
                  data:
                    brightness_pct: 100
                    transition: 0
                - variables:
                    current_node: delay_test_6_94
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_6_94\\" }}"
              sequence:
                - delay:
                    milliseconds: 500
                - variables:
                    current_node: set_variables_test_7_95
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_7_95\\" }}"
              sequence:
                - variables:
                    color_before: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: action_test_8_96
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_8_96\\" }}"
              sequence:
                - service: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: delay_test_9_97
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_9_97\\" }}"
              sequence:
                - delay:
                    milliseconds: 350
                - variables:
                    current_node: set_variables_test_10_98
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_10_98\\" }}"
              sequence:
                - variables:
                    color_after_1: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: condition_test_11_99
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_11_99\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') and (color_after_1 == color_before) %}\\"action_test_12_100\\"{% else %}\\"set_variables_test_14_102\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_12_100\\" }}"
              sequence:
                - service: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: delay_test_13_101
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_13_101\\" }}"
              sequence:
                - delay:
                    milliseconds: 350
                - variables:
                    current_node: set_variables_test_14_102
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_14_102\\" }}"
              sequence:
                - variables:
                    color_after_2: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: condition_test_15_103
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_15_103\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') and (color_after_2 == color_before) %}\\"action_test_16_104\\"{% else %}\\"END\\"{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_16_104\\" }}"
              sequence:
                - service: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: END
          default:
            - service: system_log.write
              data:
                message: "C.A.F.E.: Unknown state \\"{{ current_node }}\\", ending flow"
                level: warning
            - variables:
                current_node: END
mode: single
variables:
  ga_to_light:
    2/4/7: light.zona
    2/4/3: light.camera_da_letto
    2/4/4: light.bagno_padronale
    2/4/5: light.cucina
    2/4/6: light.soggiorno
    0/0/191: light.soffitto_studio
    0/0/142: light.soffitto_bagno_di_servizio
    0/0/248: light.lampadario_soggiorno
    0/0/1: light.faretti_disimpegno
  ga: "{{ trigger.destination }}"
  target_light: "{{ ga_to_light.get(ga) }}"
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_88:
        x: 12
        "y": 32.5
      condition_test_1_89:
        x: 312
        "y": 22.5
      condition_test_2_90:
        x: 632
        "y": 22.5
      wait_test_3_91:
        x: 952
        "y": 37.5
      condition_test_4_92:
        x: 1232
        "y": 22.5
      action_test_5_93:
        x: 1552
        "y": 32.5
      delay_test_6_94:
        x: 1852
        "y": 37.5
      set_variables_test_7_95:
        x: 2132
        "y": 32.5
      action_test_8_96:
        x: 2432
        "y": 32.5
      delay_test_9_97:
        x: 2732
        "y": 37.5
      set_variables_test_10_98:
        x: 3012
        "y": 32.5
      condition_test_11_99:
        x: 3312
        "y": 22.5
      action_test_12_100:
        x: 3632
        "y": 53
      delay_test_13_101:
        x: 3932
        "y": 58
      set_variables_test_14_102:
        x: 4212
        "y": 32.5
      condition_test_15_103:
        x: 4512
        "y": 22.5
      action_test_16_104:
        x: 4832
        "y": 32.5
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: state-machine
"
`;

exports[`YAML round-trip (fixtures) > round-trips 08-sm-simple-cafe.yaml to identical YAML 1`] = `
"alias: CAFE
description: ""
trigger:
  - alias: Trigger 1
    platform: state
    entity_id: alarm_control_panel.allarme
action:
  - alias: "Action: light.turn_on"
    service: light.turn_on
    target:
      entity_id: light.studio
    data: {}
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_1767901134917_0:
        x: 100
        "y": 401
      action_1767904379001_0:
        x: 195
        "y": 180
    graph_id: 15198922-f25d-427a-bcfa-958e7a85d62b
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 09-templates.yaml to identical YAML 1`] = `
"alias: "DHW: Smart Arrival (Maria)"
description: "Arrival: Heats if cold (after 5h away). Departure: Turns OFF (only if warm)."
trigger:
  - id: arriving
    platform: zone
    entity_id: person.maria
    event: enter
    zone: zone.city_limits
  - id: leaving
    platform: zone
    entity_id: person.maria
    event: leave
    zone: zone.city_limits
  - id: temp_limit_reached
    platform: numeric_state
    entity_id: water_heater.altherma
    above: 33
    attribute: current_temperature
action:
  - if:
      - condition: trigger
        id: arriving
        conditions:
          - condition: trigger
            id: arriving
          - condition: template
            value_template: |
              {{ (as_timestamp(now()) - as_timestamp(trigger.from_state.last_changed)) > 3600 }}
    then:
      - if:
          - condition: numeric_state
            attribute: current_temperature
            entity_id: water_heater.altherma
            above: 39
        then:
          - service: notify.mobile_app_iphone_maria
            data:
              title: 🚿 Hot Water Ready
              message: Welcome back! There is plenty of hot water waiting for you.
        else:
          - service: water_heater.turn_on
            target:
              entity_id: water_heater.altherma
          - service: notify.mobile_app_iphone_maria
            data:
              title: 🚿 Heating Water
              message: Welcome back! Turning on the water heater now.
    else:
      - if:
          - condition: or
            conditions:
              - condition: or
                conditions:
                  - condition: trigger
                    id: leaving
                  - condition: trigger
                    id: temp_limit_reached
              - condition: numeric_state
                attribute: current_temperature
                entity_id: water_heater.altherma
                above: 33
              - condition: not
                conditions:
                  - condition: zone
                    entity_id: person.maria
                    zone: zone.city_limits
        then:
          - service: water_heater.turn_off
            target:
              entity_id: water_heater.altherma
        else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_78:
        x: 12
        "y": 332
      trigger_test_1_79:
        x: 12
        "y": 172
      trigger_test_2_80:
        x: 12
        "y": 12
      condition_test_3_81:
        x: 312
        "y": 162
      condition_test_4_82:
        x: 632
        "y": 252
      action_test_5_83:
        x: 952
        "y": 172
      action_test_6_84:
        x: 952
        "y": 332
      action_test_7_85:
        x: 1252
        "y": 172
      condition_test_8_86:
        x: 632
        "y": 72
      action_test_9_87:
        x: 952
        "y": 12
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 10-multiple-entity-ids.yaml to identical YAML 1`] = `
"alias: Plex Light Toggle - Living Room
description: |-
  Sets Movie Lights when Playing, Turns on Couch Light when Paused after sunset.
  Includes a 2-second delay for scrubbing and smooth dimming transitions.
trigger:
  - id: playing
    platform: state
    entity_id:
      - media_player.v3plus
      - media_player.shield
    to: playing
  - id: paused
    platform: state
    entity_id:
      - media_player.v3plus
      - media_player.shield
    to: paused
    for:
      seconds: 2
action:
  - if:
      - condition: sun
        after: sunset
        after_offset: "00:05:00"
    then:
      - if:
          - condition: trigger
            id: playing
        then:
          - service: light.turn_off
            target:
              entity_id:
                - light.0a12b58eadb1ae45d36fdb96e025444d
                - light.751314eaa8749ab751d478948a65b33e
            data:
              transition: 2
        else:
          - if:
              - condition: trigger
                id: paused
            then:
              - service: light.turn_on
                target:
                  entity_id: light.751314eaa8749ab751d478948a65b33e
                data:
                  brightness_pct: 5
                  transition: 3
            else: []
    else: []
mode: restart
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_71:
        x: 12
        "y": 182
      trigger_test_1_72:
        x: 12
        "y": 22
      condition_test_2_73:
        x: 312
        "y": 92
      condition_test_3_74:
        x: 632
        "y": 92
      action_test_4_75:
        x: 952
        "y": 12
      condition_test_5_76:
        x: 952
        "y": 172
      action_test_6_77:
        x: 1272
        "y": 102
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 11-sm-basic-cafe.yaml to identical YAML 1`] = `
"alias: Position Test
description: ""
trigger:
  - platform: state
    entity_id: switch.test
action:
  - variables:
      current_node: action-sm-1
      flow_context: {}
  - alias: State Machine Loop
    repeat:
      until: "{{ current_node == \\"END\\" }}"
      sequence:
        - choose:
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action-sm-1\\" }}"
              sequence:
                - alias: "Action: switch.turn_on"
                  service: switch.turn_on
                - variables:
                    current_node: action-sm-2
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action-sm-2\\" }}"
              sequence:
                - alias: "Action: switch.turn_off"
                  service: switch.turn_off
                - variables:
                    current_node: action-sm-1
          default:
            - service: system_log.write
              data:
                message: "C.A.F.E.: Unknown state \\"{{ current_node }}\\", ending flow"
                level: warning
            - variables:
                current_node: END
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger-sm:
        x: 250
        "y": 100
      action-sm-1:
        x: 255
        "y": 240
      action-sm-2:
        x: 150
        "y": 405
    graph_id: 624cf5ff-0ab9-4881-b6c4-c2359635230f
    graph_version: 1
    strategy: state-machine
"
`;

exports[`YAML round-trip (fixtures) > round-trips 12-maya.yaml to identical YAML 1`] = `
"alias: Reset timer Maya se armadio chiuso → porta aperta → porta riaperta → armadio riaperto
description: ""
trigger:
  - platform: state
    entity_id: binary_sensor.armadio_cappotti_soggiorno
    to: "off"
action:
  - if:
      - condition: state
        entity_id: input_boolean.periodo_giorno
        state: "on"
    then:
      - wait_for_trigger:
          - platform: state
            entity_id: binary_sensor.porta_blindata
            from: "on"
            to: "off"
        timeout: "00:00:30"
        continue_on_timeout: false
      - wait_for_trigger:
          - platform: state
            entity_id: binary_sensor.porta_blindata
            from: "off"
            to: "on"
        timeout: "00:15:00"
        continue_on_timeout: false
      - wait_for_trigger:
          - platform: state
            entity_id: binary_sensor.armadio_cappotti_soggiorno
            to: "on"
        timeout: "00:00:30"
        continue_on_timeout: false
      - service: timer.start
        target:
          entity_id: timer.uscita_maya
    else: []
mode: restart
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_65:
        x: 12
        "y": 22
      condition_test_1_66:
        x: 312
        "y": 12
      wait_test_2_67:
        x: 632
        "y": 27
      wait_test_3_68:
        x: 912
        "y": 27
      wait_test_4_69:
        x: 1192
        "y": 27
      action_test_5_70:
        x: 1472
        "y": 22
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 13-many-sequences.yaml to identical YAML 1`] = `
"alias: ensuite fan dupe
description: ""
trigger:
  - id: NightOff
    platform: time
    at: "21:00:00"
  - id: light-toggled-on
    platform: state
    entity_id:
      - light.ensuite
    to:
      - "on"
  - id: light-toggled-off
    platform: state
    entity_id:
      - light.ensuite
    to:
      - "off"
  - id: fan-switch-toggled-off
    platform: state
    entity_id:
      - switch.ensuite_fan_boost
    to:
      - "off"
action:
  - alias: Off at night
    if:
      - condition: trigger
        id:
          - NightOff
    then:
      - if:
          - condition: state
            entity_id: switch.ensuite
            state:
              - "on"
        then:
          - wait_for_trigger:
              - platform: state
                entity_id:
                  - switch.ensuite
                to:
                  - "off"
            timeout:
              hours: 0
              minutes: 20
              seconds: 0
              milliseconds: 0
          - service: switch.turn_off
            target:
              entity_id:
                - switch.ensuite_fan
                - switch.ensuite_fan_boost
            data: {}
        else:
          - service: switch.turn_off
            target:
              entity_id:
                - switch.ensuite_fan
                - switch.ensuite_fan_boost
            data: {}
    else:
      - if:
          - condition: trigger
            id:
              - light-toggled-on
              - fan-switch-toggled-on
        then:
          - if:
              - condition: and
                conditions:
                  - condition: time
                    after: "05:45:00"
                    before: "21:00:00"
                  - condition: state
                    entity_id: light.ensuite
                    state:
                      - "on"
                  - condition: state
                    entity_id: switch.ensuite_fan
                    state:
                      - "off"
            then:
              - service: switch.turn_on
                target:
                  entity_id: switch.ensuite_fan
                data: {}
            else: []
        else:
          - if:
              - condition: trigger
                id:
                  - light-toggled-off
                  - fan-switch-toggled-off
                conditions:
                  - condition: trigger
                    id:
                      - light-toggled-off
                      - fan-switch-toggled-off
                  - condition: time
                    after: "05:45:00"
                    before: "21:00:00"
            then:
              - if:
                  - condition: trigger
                    id:
                      - light-toggled-off
                then:
                  - delay:
                      hours: 0
                      minutes: 30
                      seconds: 0
                      milliseconds: 0
                  - service: switch.turn_off
                    target:
                      entity_id: switch.ensuite_fan
                    data: {}
                else:
                  - delay:
                      hours: 1
                      minutes: 0
                      seconds: 0
                      milliseconds: 0
                  - service: switch.turn_off
                    target:
                      entity_id: switch.ensuite_fan
                    data: {}
            else: []
mode: restart
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_47:
        x: 12
        "y": 187
      trigger_test_1_48:
        x: 12
        "y": 347
      trigger_test_2_49:
        x: 12
        "y": 507
      trigger_test_3_50:
        x: 12
        "y": 27
      condition_test_4_51:
        x: 312
        "y": 257
      condition_test_5_52:
        x: 632
        "y": 167
      wait_test_6_53:
        x: 972
        "y": 12
      action_test_7_54:
        x: 1272
        "y": 97
      action_test_8_55:
        x: 952
        "y": 162
      condition_test_9_56:
        x: 632
        "y": 347
      condition_test_10_57:
        x: 952
        "y": 322
      action_test_11_58:
        x: 1272
        "y": 257
      condition_test_12_59:
        x: 952
        "y": 502
      condition_test_13_60:
        x: 1272
        "y": 417
      delay_test_14_61:
        x: 1592
        "y": 197
      action_test_15_62:
        x: 1872
        "y": 187
      delay_test_16_63:
        x: 1592
        "y": 347
      action_test_17_64:
        x: 1872
        "y": 347
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 14-washingmachine.yaml to identical YAML 1`] = `
"alias: Verzend bericht indien wasmachine gereed
description: Stuur melding zodra wasmachine gereed is
trigger:
  - id: machine_on
    platform: numeric_state
    entity_id:
      - sensor.noord_wasplaats_vermogen_wasmachine
    for:
      hours: 0
      minutes: 2
      seconds: 0
    above: 10
  - id: machine_off
    platform: numeric_state
    entity_id:
      - sensor.noord_wasplaats_vermogen_wasmachine
    for:
      hours: 0
      minutes: 5
      seconds: 0
    below: 2
action:
  - if:
      - condition: trigger
        id: machine_on
        conditions:
          - condition: trigger
            id: machine_on
          - condition: state
            entity_id: input_boolean.wasmachine_status
            state: "off"
    then:
      - service: input_boolean.turn_on
        target:
          entity_id: input_boolean.wasmachine_status
        data: {}
      - service: input_number.set_value
        target:
          entity_id: input_number.wasmachine_energie_start_cyclus
        data:
          value: "{{ states('sensor.noord_wasplaats_energie_wasmachine') }}"
    else:
      - if:
          - condition: trigger
            id: machine_off
            conditions:
              - condition: trigger
                id: machine_off
              - condition: state
                entity_id: input_boolean.wasmachine_status
                state: "on"
        then:
          - service: input_boolean.turn_off
            target:
              entity_id: input_boolean.wasmachine_status
            data: {}
          - variables:
              verbruik_cyclus: "{{ (((states('sensor.noord_wasplaats_energie_wasmachine') | float) - (states('input_number.wasmachine_energie_start_cyclus') | float)) * 1000) | int }}"
          - service: script.notify_by_label
            data:
              labels:
                - gsm_bart
                - gsm_cindy
              title: Wasmachine gereed
              message: Cyclus heeft ({{ verbruik_cyclus | int }} Wh verbruikt
          - service: tts.cloud_say
            data:
              entity_id:
                - media_player.kitchen_speaker
                - media_player.zithoek_speaker
              message: Het wasmachine is gereed en moet leeg gemaakt worden
        else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_37:
        x: 12
        "y": 182
      trigger_test_1_38:
        x: 12
        "y": 22
      condition_test_2_39:
        x: 312
        "y": 92
      action_test_3_40:
        x: 642
        "y": 192
      action_test_4_41:
        x: 952
        "y": 182
      condition_test_5_42:
        x: 632
        "y": 12
      action_test_6_43:
        x: 952
        "y": 22
      set_variables_test_7_44:
        x: 1252
        "y": 102
      action_test_8_45:
        x: 1552
        "y": 102
      action_test_9_46:
        x: 1852
        "y": 102
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 15-open-ccu.yaml to identical YAML 1`] = `
"alias: Zapfenstreich Automatisierung
description: ""
trigger:
  - id: ZapfenstreichAn
    platform: state
    entity_id:
      - input_boolean.zapfenstreich
    from: "off"
    to: "on"
action:
  - if:
      - condition: and
        conditions:
          - condition: state
            entity_id: input_boolean.zapfenstreich
            state: "on"
          - condition: trigger
            id:
              - ZapfenstreichAn
    then:
      - service: input_boolean.turn_off
        target:
          entity_id: input_boolean.gartenbeleuchtung
        data: {}
      - device_id: 5c52f5c8c8e59972a9f7d359a5bcaf2f
        domain: switch
        type: turn_off
        entity_id: 4906302ad1fd63fb7a358ce3e30146e4
      - device_id: ee8b0db24fc5d9ca7cf1e9ad4d406e45
        domain: switch
        type: turn_off
        entity_id: 616e70061d2add8d6295bd2204b25f7d
      - device_id: b8ac21757194c9fba5cac089fd8ede51
        domain: switch
        type: turn_off
        entity_id: cace6d6a39ec897bc6560f945c7fc689
      - device_id: 8255c85496be5b6962a278ebdd7411e8
        domain: switch
        type: turn_off
        entity_id: 62f9263c0006b6f9acdf12a35139e095
      - parallel:
          - - device_id: ad7a2c892d7118cbfcdc89d2e2b3323d
              domain: cover
              type: close
              entity_id: 63bff85b1243e4da6edf77f186725bc6
          - - delay:
                hours: 0
                minutes: 0
                seconds: 10
                milliseconds: 0
            - device_id: e2a191a70faa1f7d07a4068b51b417fb
              domain: light
              type: turn_off
              entity_id: fe1b6aecf59b3bdd146aec7d8e589496
            - service: input_boolean.turn_off
              target:
                entity_id: input_boolean.zapfenstreich
              data: {}
          - - service: input_boolean.turn_off
              target:
                entity_id: input_boolean.gartenbeleuchtung
              data: {}
      - device_id: 38156e5e85c33bd4d2129e9c7a67c5af
        domain: switch
        type: turn_off
        entity_id: f7cbd6770bbb3bb5276c3d8e991e9b4d
    else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_24:
        x: 12
        "y": 112.5
      condition_test_1_25:
        x: 312
        "y": 102.5
      action_test_2_26:
        x: 632
        "y": 112.5
      action_test_3_27:
        x: 932
        "y": 112.5
      action_test_4_28:
        x: 1232
        "y": 112.5
      action_test_5_29:
        x: 1532
        "y": 112.5
      action_test_6_30:
        x: 1832
        "y": 112.5
      action_test_7_31:
        x: 2412
        "y": 213
      delay_test_8_32:
        x: 2132
        "y": 117.5
      action_test_9_33:
        x: 2412
        "y": 53
      action_test_10_34:
        x: 2712
        "y": 172
      action_test_11_35:
        x: 2712
        "y": 12
      action_test_12_36:
        x: 3012
        "y": 112.5
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 16-paperless.yaml to identical YAML 1`] = `
"alias: Paperless AI - Auto Shutdown After 4 Hours
description: Automatically shutdown Paperless AI container after 4 hours of runtime
trigger:
  - platform: state
    entity_id: binary_sensor.lxc_paperless_ai_209_status
    to: "on"
    for:
      hours: 4
action:
  - if:
      - condition: state
        entity_id: binary_sensor.lxc_paperless_ai_209_status
        state: "on"
    then:
      - service: persistent_notification.create
        data:
          title: Container Auto-Shutdown
          message: Paperless AI (209) has been running for 4 hours and will be shut down now.
          notification_id: paperless_ai_shutdown
      - service: button.press
        target:
          entity_id: button.lxc_paperless_ai_209_shutdown
      - delay:
          seconds: 5
      - service: persistent_notification.create
        data:
          title: Container Shutdown Complete
          message: Paperless AI (209) has been shut down successfully.
          notification_id: paperless_ai_shutdown_complete
    else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_18:
        x: 12
        "y": 22
      condition_test_1_19:
        x: 312
        "y": 12
      action_test_2_20:
        x: 632
        "y": 22
      action_test_3_21:
        x: 932
        "y": 22
      delay_test_4_22:
        x: 1232
        "y": 27
      action_test_5_23:
        x: 1512
        "y": 22
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 17-nested-condition.yaml to identical YAML 1`] = `
"alias: "Auto light TV : Handle supposed state"
description: ""
trigger:
  - id: Occupancy detected
    platform: state
    entity_id:
      - binary_sensor.xxx_presence_sensor
    to:
      - "on"
  - id: Occupancy clear for x
    platform: state
    entity_id:
      - binary_sensor.xxx_presence_sensor
    to:
      - "off"
    for:
      hours: 0
      minutes: 0
      seconds: 30
  - id: Illuminance below
    platform: numeric_state
    entity_id:
      - sensor.xxx_light_level
    below: 60
  - id: Illuminance above
    platform: numeric_state
    entity_id:
      - sensor.xxx_light_level
    above: 90
action:
  - if:
      - condition: or
        conditions:
          - condition: and
            conditions:
              - condition: trigger
                id:
                  - Occupancy detected
              - condition: numeric_state
                entity_id: sensor.xxx_light_level
                below: 60
          - condition: and
            conditions:
              - condition: trigger
                id:
                  - Illuminance below
              - condition: not
                conditions:
                  - condition: state
                    for:
                      hours: 0
                      minutes: 0
                      seconds: 30
                    entity_id: xxx_presence_sensor
                    state:
                      - "off"
    then:
      - service: input_boolean.turn_on
        target:
          entity_id: input_boolean.tv_light_supposed_state
    else:
      - service: input_boolean.turn_off
        target:
          entity_id: input_boolean.tv_light_supposed_state
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_11:
        x: 12
        "y": 172
      trigger_test_1_12:
        x: 12
        "y": 332
      trigger_test_2_13:
        x: 12
        "y": 492
      trigger_test_3_14:
        x: 12
        "y": 12
      condition_test_4_15:
        x: 312
        "y": 242
      action_test_5_16:
        x: 632
        "y": 172
      action_test_6_17:
        x: 632
        "y": 332
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 18-sensor-trigger.yaml to identical YAML 1`] = `
"alias: Kitchen.Freezer_Temp.Automation
description: ""
trigger:
  - platform: device
    entity_id: 05dfa830b43a4f97adfb34a06c2bce50
    for:
      hours: 0
      minutes: 15
      seconds: 0
    above: 20
    device_id: 7239e87f810ebbd9be93fe71f3977211
    domain: sensor
    type: temperature
action:
  - service: notify.e_mail
    data:
      message: The Freezer in the Kitchen is Open!
      title: Alert!
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_9:
        x: 12
        "y": 12
      action_test_1_10:
        x: 312
        "y": 12
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 19-nested-condition.yaml to identical YAML 1`] = `
"alias: Weekly Full Backup
description: Weekly Full Backup
trigger:
  - platform: time
    at: "03:00:00"
action:
  - if:
      - condition: and
        conditions:
          - condition: time
            weekday:
              - sat
    then:
      - service: hassio.backup_full
        data:
          compressed: true
    else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_6:
        x: 12
        "y": 22
      condition_test_1_7:
        x: 312
        "y": 12
      action_test_2_8:
        x: 632
        "y": 22
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 20-select.yaml to identical YAML 1`] = `
"alias: Fox batteries to Self Use CAFE TEST
description: ""
trigger:
  - platform: device
    entity_id: sensor.myenergi_mg_charger_power_charging
    below: 1450
    device_id: 668ca38238b4ea09a8c51fa4d4f45e7c
    domain: sensor
    type: power
action:
  - if:
      - condition: time
        enabled: false
        after: "05:30:00"
        before: "23:30:00"
    then:
      - device_id: fc32de247133cbee1c2587690d3f4629
        domain: select
        type: select_option
        entity_id: select.work_mode
        option: Self Use
      - service: notify.mobile_app_pbw_iphone
        data:
          message: Change slot closed
          title: Self Use reactivated
    else: []
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_2:
        x: 12
        "y": 22
      condition_test_1_3:
        x: 312
        "y": 12
      action_test_2_4:
        x: 632
        "y": 22
      action_test_3_5:
        x: 932
        "y": 22
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 21-trigger-to-null.yaml to identical YAML 1`] = `
"alias: HVAC - climate set
description: ""
trigger:
  - platform: state
    entity_id:
      - climate.CLIMATE_ENTITY
    from: "off"
action:
  - delay:
      hours: 0
      minutes: 0
      seconds: 2
      milliseconds: 0
mode: single
variables:
  _cafe_metadata:
    version: 1
    nodes:
      trigger_test_0_0:
        x: 12
        "y": 12
      delay_test_1_1:
        x: 312
        "y": 17
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;
